# learn-genai

./: .gitignore  agent.py  caching.ipynb  first.py  main.py  pyproject.toml  rag.py  stream_events.ipynb  streaming.ipynb  structured_outputs.py  summarizer.py  tool_calling.ipynb
