[project]
name = "learn-genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crewai>=0.141.0",
    "crewai-tools>=0.0.1",
    "duckduckgo-search>=8.0.5",
    "faiss-cpu>=1.11.0",
    "gradio>=5.35.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-huggingface>=0.3.0",
    "langchain-ollama>=0.3.3",
    "nbconvert>=7.16.6",
    "pypdf>=5.7.0",
    "ruff>=0.12.1",
    "smolagents[litellm]>=1.19.0",
    "torch>=2.7.1",
    "transformers>=4.53.1",
]
